--- a/src/components/front/front-base/pages/elem-base-algorithm.html
+++ b/src/components/front/front-base/pages/elem-base-algorithm.html
@@ -12,6 +12,7 @@
   <div>
     <p><a href="#about">О алгоритмах</a></p>
     <p><a href="#links">Links</a></p>
+    <p><a href="#props">Свойства алгоритмов</a></p>
     <p><a href="#bigo">Сложность</a></p>
     <p><a href="#sort">Сортировка</a></p>
     <p><a href="#search">Поиск</a></p>
@@ -46,6 +47,29 @@
   <h3>learn.coderslang.com</h3>
   <p><a href="https://learn.coderslang.com/ru/0036-javascript-bubble-sort/">learn.coderslang.com/ru/0036-javascript-bubble-sort</a> Сортировка пузырьком на JavaScript (2021.02.20)</p>
   <p><a href="https://learn.coderslang.com/ru/0037-javascript-optimized-bubble-sort.-coctail-sort/">learn.coderslang.com/ru/0037-javascript-optimized-bubble-sort.-coctail-sort</a> Улучшенная сортировка пузырьком на JavaScript. Шейкерная сортировка (2021.02.21)</p>
+</article>
+
+
+<!-- Свойства алгоритмов -->
+<article class="article">
+  <div class="anchor" id="props"></div>
+  <h2>Свойства алгоритмов</h2>
+
+  <ol>
+    <li><strong>Дискретность</strong> – алгоритм представляется как последовательность ин-
+струкций исполнителя. Каждая инструкция выполняется только после
+того, как закончилось выполнение предыдущей команды.</li>
+    <li><strong>Конечность (результативность, финитность)</strong> – алгоритм должен за-
+канчиваться после выполнения конечного числа инструкций.</li>
+    <li><strong>Детерминированность</strong> – каждый шаг алгоритма должен быть одно-
+значно определен – записан на формальном языке исполнителя. Де-
+терминированность обеспечивает совпадение результатов, получаемых
+при многократном выполнении алгоритма, на одном и том же наборе
+входных данных.</li>
+    <li><strong>Массовость</strong> – алгоритм решения задачи должен быть применим для
+некоторого класса задач, различающихся лишь значениями входных
+данных.</li>
+  </ol>
 </article>
 
 
