--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -60,6 +60,8 @@
     <hr>
     <li><a href="rs-test/rs-test-codereview.html" class="js-rs-test">[St2] Code-Review</a> (82 из 100)</li>
     <li><a href="rs-test/rs-test-spa.html" class="js-rs-test">[St2] Single Page Application</a> (88 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-webstorage.html" class="js-rs-test">[St2] Web Storage</a> (88 из 100)</li>
   </ol>
 </article>
 
