--- a/src/components/code/code-js/pages/elem-promise-tasks.html
+++ b/src/components/code/code-js/pages/elem-promise-tasks.html
@@ -1,4 +1,8 @@
-<h1>Промисы</h1>
+<h1>Задачи на Promise</h1>
+
+<article class="article">
+  <div id="link-to-promise" class="btn-back">назад</div>
+</article>
 
 <!-- Заголовок -->
 <div class="article">
@@ -11,7 +15,6 @@
 
   <div>
     <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
     <p><a href="#task1">Базовые задачи на Promise в JavaScript</a></p>
     <p><a href="#task1-1">Задачи на .then Задача 1. Случаи, когда .then возвращает или не возвращает значение</a></p>
     <p><a href="#task1-2">Задачи на .then Задача 2. Второй аргумент .then</a></p>
@@ -45,98 +48,11 @@
   <div class="anchor" id="links"></div>
   <h2>links</h2>
 
-  <p><a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Promise">developer.mozilla.org</a> Promise</p>
-  <p><a href="https://learn.javascript.ru/promise">learn.javascript.ru/promise</a> Promise</p>
-  <p><a href="https://doka.guide/js/promise/">doka.guide/js/promise/</a> Promise</p>
-
   <h3>Ссылки на задачи по Промисам</h3>
   <p><a href="https://habr.com/ru/articles/582914/">habr.com/ru/articles/582914</a>
     <br>Базовые задачи на Promise в JavaScript (2021.10.12)</p>
   <p><a href="https://habr.com/ru/companies/otus/articles/686670/">habr.com/ru/companies/otus/articles/686670</a>
     <br>10 задач с JavaScript Promise для подготовки к собеседованиям (2022.09.06 Otus)</p>
-</article>
-
-
-<!-- about -->
-<article class="article">
-  <div class="anchor" id="about"></div>
-  <h2>about</h2>
-
-  <p>Промис (Promise) — специальный объект JavaScript, который используется для написания и обработки асинхронного кода.</p>
-  <p>Асинхронные функции возвращают объект Promise в качестве значения. Внутри промиса хранится результат вычисления, которое может быть уже выполнено или выполнится в будущем.</p>
-  <p>Промис может находиться в одном из трёх состояний:</p>
-  <ul>
-    <li>pending — стартовое состояние, операция стартовала;</li>
-    <li>fulfilled — получен результат;</li>
-    <li>rejected — ошибка.</li>
-  </ul>
-  <p>Поменять состояние можно только один раз: перейти из pending либо в fulfilled, либо в rejected</p>
-  <p>У промиса есть методы then() и catch(), которые позволяют использовать результат работы промиса.</p>
-
-  <h3>Как пишется</h3>
-  <p>Промис создаётся с помощью конструктора.</p>
-  <p>В конструктор передаётся функция-исполнитель асинхронной операции (англ. executor). Она вызывается сразу после создания промиса. Задача этой функции — выполнить асинхронную операцию и перевести состояние промиса в fulfilled (успех) или rejected (ошибка).</p>
-  <p>Изменить состояние промиса можно, вызвав колбэки, переданные аргументами в функцию:</p>
-  <pre>const promise = new Promise(function (resolve, reject) {
-    const data = getData() // делаем асинхронную операцию: запрос в БД, API, etc.
-    resolve(data) // переводим промис в состояние fulfilled. Результатом выполнения будет объект data
-  })
-  
-  const errorPromise = new Promise(function (resolve, reject) {
-    reject(new Error('ошибка')) // переводим промис в состояние rejected. Результатом выполнения будет объект Error
-  })
-  </pre>
-  <ul>
-    <li>первый параметр (в примере кода назван resolve) — колбэк для перевода промиса в состояние fulfilled, при его вызове аргументом передаётся результат операции;</li>
-    <li>второй параметр (в примере кода назван reject) — колбэк для перевода промиса в состояние rejected, при его вызове аргументом передаётся информация об ошибке.</li>
-  </ul>
-
-  <h3>Как понять</h3>
-  <p>Промис решает задачу выполнения кода, который зависит от результата асинхронной операции.</p>
-  <p>Промис устроен таким образом, что рычаги управления его состоянием остаются у асинхронной функции. После создания, промис находится в состоянии ожидания pending. Когда асинхронная операция завершается, функция переводит промис в состояние успеха fulfilled или ошибки rejected.</p>
-  <p>С помощью методов then(), catch() и finally() мы можем реагировать на изменение состояния промиса и использовать результат его выполнения.</p>
-
-  <h3>Методы</h3>
-  <p>Существует три метода, которые позволяют работать с результатом выполнения вычисления внутри промиса:</p>
-  <ul>
-    <li>then()</li>
-    <li>catch()</li>
-    <li>finally()</li>
-  </ul>
-
-  <h3>then</h3>
-  <p>Метод then() используют, чтобы выполнить код после успешного выполнения асинхронной операции.</p>
-  <p>Например, мы запросили у сервера список фильмов и хотим отобразить их на экране, когда сервер получит результат. В этом случае:</p>
-  <ul>
-    <li>асинхронная операция — запрос данных у сервера;</li>
-    <li>код, который мы хотим выполнить после её завершения, — отрисовка списка.</li>
-  </ul>
-  <p>Метод then() принимает в качестве аргумента две функции-колбэка. Если промис в состоянии fulfilled то выполнится первая функция. Если в состоянии rejected — вторая. Хорошей практикой считается не использовать второй аргумент метода then() и обрабатывать ошибки при помощи метода catch().</p>
-  <pre>fetch(`https://swapi.dev/api/films/${id}/`).then(function (movies) {
-    renderList(movies)
-  })</pre>
-  <p>В коде выше, асинхронная функция fetch() возвращает промис, к которому применяется метод then. При его выполнении в переменной movies будет ответ сервера.</p>
-  
-  <h3>catch</h3>
-  <p>Метод catch() используют, чтобы выполнить код в случае ошибки при выполнении асинхронной операции.</p>
-  <p>Например, мы запросили у сервера список фильмов и хотим показать экран обрыва соединения, если произошла ошибка. В этом случае:</p>
-  <ul>
-    <li>асинхронная операция — запрос данных у сервера;</li>
-    <li>код, который мы хотим выполнить при ошибке — экран обрыва соединения.</li>
-  </ul>
-  <p>Метод catch() принимает в качестве аргумента функцию-колбэк, которая выполняется сразу после того, как промис поменял состояние на rejected. Параметр колбэка содержит экземпляр ошибки:</p>
-  <pre>fetch(`https://swapi.dev/api/films/${id}/`).catch(function (error) {
-    renderErrorMessage(error)
-  })</pre>
-
-  <h3>finally</h3>
-  <p>Метод finally() используют, чтобы выполнить код при завершении асинхронной операции. Он будет выполнен вне зависимости от того, была ли операция успешной или завершилась ошибкой.</p>
-  <p>Самый частый сценарий использования finally() — работа с индикаторами загрузки. Перед началом асинхронной операции разработчик включает индикатор загрузки. Индикатор нужно убрать вне зависимости от того, как завершилась операция. Если этого не сделать, то пользователь не сможет взаимодействовать с интерфейсом.</p>
-  <p>Метод finally() принимает в качестве аргумента функцию-колбэк, которая выполняется сразу после того, как промис поменял состояние на rejected или fulfilled:</p>
-  <pre>let isLoading = true
-    fetch(`https://swapi.dev/api/films/${id}/`).finally(function () {
-      isLoading = false
-    })</pre>
 </article>
 
 
