--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -9,6 +9,7 @@
   <div class="article__contents">
     <a href="#rs-test" class="contents__link">RS Auto Test</a>
     <a href="#dsr-exam" class="contents__link">DSR Exam</a>
+    <a href="#neoflex" class="contents__link">Neoflex</a>
     <a href="#quiz" class="contents__link">quiz</a>
     <a href="#rain" class="contents__link">Дождь</a>
   </div>
@@ -45,23 +46,21 @@
     <li><a href="rs-test/rs-test-cleancode.html" class="js-rs-test">Clean-code</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-linters.html" class="js-rs-test">Linters, Formatters and Husky</a> (85 из 100)</li>
     <hr>
-    <li><a href="rs-test/rs-test-modules.html" class="js-rs-test">Modules in JavaScript</a> (78 из 100)</li>
-    <li><a href="rs-test/rs-test-bundlers.html" class="js-rs-test">Introduction to Bundlers</a> (86 из 100)</li>
-    <hr>
-    <li><a href="rs-test/rs-test-chrome.html" class="js-rs-test">Chrome DevTools</a> (94 из 100)</li>
-    <li><a href="rs-test/rs-test-client.html" class="js-rs-test">Client - Server interaction</a> (94 из 100)</li>
-    <hr>
-    <li><a href="rs-test/rs-test-classes.html" class="js-rs-test">Classes & Prototypes</a> (96 из 100)</li>
-    <li><a href="rs-test/rs-test-oop.html" class="js-rs-test">OOP Test</a> (95 из 100)</li>
-    <li><a href="rs-test/rs-test-final.html" class="js-rs-test">Final test stage#1</a> (91 из 100)</li>
+    <li><a href="rs-test/rs-test-modules.html" class="js-rs-test">[St1] Modules in JavaScript</a> (78 из 100)</li>
+    <li><a href="rs-test/rs-test-bundlers.html" class="js-rs-test">[St1] Introduction to Bundlers</a> (86 из 100)</li>
+    <li><a href="rs-test/rs-test-chrome.html" class="js-rs-test">[St1] Chrome DevTools</a> (94 из 100)</li>
+    <li><a href="rs-test/rs-test-client.html" class="js-rs-test">[St1] Client - Server interaction</a> (94 из 100)</li>
+    <li><a href="rs-test/rs-test-classes.html" class="js-rs-test">[St1] Classes & Prototypes</a> (96 из 100)</li>
+    <li><a href="rs-test/rs-test-oop.html" class="js-rs-test">[St1] OOP Test</a> (95 из 100)</li>
+    <li><a href="rs-test/rs-test-final.html" class="js-rs-test">[St1] Final test stage#1</a> (91 из 100)</li>
     <hr>
     <li><a href="rs-test/rs-test-tsbasics.html" class="js-rs-test">[St2] TypeScript Basics</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-tsadvanced.html" class="js-rs-test">[St2] TypeScript Advanced</a> (85 из 100)</li>
     <hr>
     <li><a href="rs-test/rs-test-codereview.html" class="js-rs-test">[St2] Code-Review</a> (82 из 100)</li>
     <li><a href="rs-test/rs-test-spa.html" class="js-rs-test">[St2] Single Page Application</a> (88 из 100)</li>
-    <hr>
     <li><a href="rs-test/rs-test-webstorage.html" class="js-rs-test">[St2] Web Storage</a> (88 из 100)</li>
+    <li><a href="rs-test/rs-test-fp.html" class="js-rs-test">[St2] Functional Programming</a> (85 из 100)</li>
   </ol>
 </article>
 
@@ -71,6 +70,15 @@
   <div class="anchor" id="dsr-exam"></div>
   <h2>DSR NetSchool 2023/24 Exam</h2>
   <p><a href="dsr/dsr-exam.html" class="dsr-exam">DSR NetSchool 2023/24 Exam</a> (55 из 100)</p>
+</article>
+
+
+<!-- neoflex -->
+<article class="article">
+  <div class="anchor" id="neoflex"></div>
+  <h2>Neoflex Frontend 2024</h2>
+  <p><a href="neoflex/nf-test.html" class="neoflex-test">Neoflex 2024 frontend test</a> (25 из 25)</p>
+  <p><a href="neoflex/ef-test1.html" class="neoflex-test">15-минутный Quick English Check</a></p>
 </article>
 
 
