--- a/src/components/front/front-vacancy/pages/elem-postcross.html
+++ b/src/components/front/front-vacancy/pages/elem-postcross.html
@@ -1,67 +1,71 @@
 <h1>Разработка сайта Посткроссинга</h1>
 
-<div class="content__menu">
-  <p class="content__menu-link" id="content__menu-link1">Сайты</p>
-  <p class="content__menu-link" id="content__menu-link2">Статьи</p>
+<!-- Заголовок -->
+<div class="article">
+  <div class="anchor" id="content"></div>
+  <h2>Содержание</h2>
 </div>
 
+<!-- Содержание -->
+<div class="article article__content">
 
-<div class="content__items">
-
-  <div class="content__item" id="content__item1">
-    <h2>Готовые сайты с посткроссингом</h2>
-
-    <div class="article">
-      <p>
-        <a href="https://www.postcrossing.com/">postcrossing.com</a>
-          Postcrossing: Postcards connecting the world
-      </p>
-
-      <p>
-        <a href="https://postcross.ru/">postcross.ru</a>
-        Сайт для русскоговорящих любителей посткроссинга
-      </p>
-      
-      <p>
-        <a href="https://xn--d1amagjbbpqc2h.xn--p1ai/">домоткрыток.рф</a>
-        Федеральная лига посткроссеров
-      </p>
-    </div>
-
-  </div>
-
-
-  <div class="content__item" id="content__item2">
-    <h2>Статьи о посткроссинге</h2>
-
-    <div class="article">
-
-      <p>
-        <a href="https://www.toybytoy.com/collection/Postcrossing">toybytoy.com/collection/Postcrossing</a>
-        Посткроссинг (2016-05-01)
-      </p>
-   
-      <p>
-        <a href="https://habr.com/ru/articles/416883/">habr.com/ru/articles/416883</a>
-        Как я свой Postcrossing писал (2018-07-11 Inexu)
-      </p>
-   
-      <p>
-        <a href="https://www.gazeta.ru/social/2020/02/18/12966217.shtml">gazeta.ru</a>
-        Шлите открытки: посткроссингу — 15 лет (2020-02-18)
-      </p>
-      
-      <p>
-        <a href="https://mgazeta.com/articles/interesno/2022-06-20/postkrossing-chto-eto-takoe-i-s-chem-eto-edyat-2847903">mgazeta.com</a>
-        Посткроссинг: что это такое и с чем это едят? (2022-06-20)
-      </p>
-
-      <p>
-        <a href="https://journal.tinkoff.ru/postcrossing/">journal.tinkoff.ru/postcrossing</a>
-        Сколько стоит заниматься посткроссингом (2023-03-30)
-      </p>
-    </div>
-
+  <div>
+    <p><a href="#sites">Сайты</a></p>
+    <p><a href="#articles">Статьи</a></p>
   </div>
 
 </div>
+
+
+<!-- Готовые сайты с посткроссингом -->
+<article class="article">
+  <div class="anchor" id="sites"></div>
+  <h2>Готовые сайты с посткроссингом</h2>
+
+  <p>
+    <a href="https://www.postcrossing.com/">postcrossing.com</a>
+      Postcrossing: Postcards connecting the world
+  </p>
+
+  <p>
+    <a href="https://postcross.ru/">postcross.ru</a>
+    Сайт для русскоговорящих любителей посткроссинга
+  </p>
+  
+  <p>
+    <a href="https://xn--d1amagjbbpqc2h.xn--p1ai/">домоткрыток.рф</a>
+    Федеральная лига посткроссеров
+  </p>
+</article>
+
+
+<!-- Статьи о посткроссинге -->
+<article class="article">
+  <div class="anchor" id="articles"></div>
+  <h2>Статьи о посткроссинге</h2>
+
+  <p>
+    <a href="https://www.toybytoy.com/collection/Postcrossing">toybytoy.com/collection/Postcrossing</a>
+    Посткроссинг (2016-05-01)
+  </p>
+
+  <p>
+    <a href="https://habr.com/ru/articles/416883/">habr.com/ru/articles/416883</a>
+    Как я свой Postcrossing писал (2018-07-11 Inexu)
+  </p>
+
+  <p>
+    <a href="https://www.gazeta.ru/social/2020/02/18/12966217.shtml">gazeta.ru</a>
+    Шлите открытки: посткроссингу — 15 лет (2020-02-18)
+  </p>
+  
+  <p>
+    <a href="https://mgazeta.com/articles/interesno/2022-06-20/postkrossing-chto-eto-takoe-i-s-chem-eto-edyat-2847903">mgazeta.com</a>
+    Посткроссинг: что это такое и с чем это едят? (2022-06-20)
+  </p>
+
+  <p>
+    <a href="https://journal.tinkoff.ru/postcrossing/">journal.tinkoff.ru/postcrossing</a>
+    Сколько стоит заниматься посткроссингом (2023-03-30)
+  </p>
+</article>
