--- a/src/components/code/code-css/pages/elem-css.html
+++ b/src/components/code/code-css/pages/elem-css.html
@@ -272,7 +272,19 @@
 <article class="article">
   <div class="anchor" id="css-font-weight"></div>
   <h3>font-weight</h3>
-  <p>Толщина шрифта.</p>
+  <p>Толщина шрифта задается цифровым значением или именем</p>
+  <ol>
+    <li>100 thin</li>
+    <li>200 extraLight</li>
+    <li>300 light</li>
+    <li>400 regular</li>
+    <li>500 medium</li>
+    <li>600 semiBold</li>
+    <li>700 bold</li>
+    <li>800 extraBold</li>
+    <li>900 black</li>
+    <li>950 extraBlack</li>
+  </ol>
 </article>
 
 <article class="article">
