--- a/src/components/code/code-js/pages/elem-xhr.html
+++ b/src/components/code/code-js/pages/elem-xhr.html
@@ -1,6 +1,8 @@
-<h1>Объект XMLHttpRequest</h1>
+<h1>API XMLHttpRequest</h1>
 
 <article class="article">
+  <p>XMLHttpRequest это API, который предоставляет клиенту функциональность для обмена данными между клиентом и сервером. Данный API предоставляет простой способ получения данных по ссылке без перезагрузки страницы. Это позволяет обновлять только часть веб-страницы не прерывая пользователя. XMLHttpRequest используется в AJAX запросах и особенно в single-page приложениях.</p>
+  <p>XMLHttpRequest может быть использован для получения любых типов данных, не только XML, и поддерживает протоколы помимо HTTP (включая file и ftp).</p>
   <p>XMLHttpRequest – это встроенный в браузер объект, который даёт возможность делать HTTP-запросы к серверу без перезагрузки страницы. XMLHttpRequest имеет два режима работы: синхронный и асинхронный.</p>
 </article>
 
