--- a/src/components/front/front-articles/pages/elem-articles.html
+++ b/src/components/front/front-articles/pages/elem-articles.html
@@ -1,5 +1,6 @@
 <h1>Полезные заметки</h1>
-<article>
+
+<article class="article">
   <h2>Как сделать текстовый документ, содержащий список файлов в нужной папке</h2>
   <h3>Командами консоли</h3>
   <ol>
