--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -61,6 +61,8 @@
     <li><a href="rs-test/rs-test-spa.html" class="js-rs-test">[St2] Single Page Application</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-webstorage.html" class="js-rs-test">[St2] Web Storage</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-fp.html" class="js-rs-test">[St2] Functional Programming</a> (85 из 100)</li>
+    <li><a href="rs-test/rs-test-asyncjs.html" class="js-rs-test">[St2] Async JS Test</a> (79 из 100)</li>
+    <li><a href="rs-test/rs-test-websecurity.html" class="js-rs-test">[St2] Web Security</a> (0 из 100)</li>
   </ol>
 </article>
 
