--- a/src/components/front/front-framework/pages/elem-vue.html
+++ b/src/components/front/front-framework/pages/elem-vue.html
@@ -51,10 +51,14 @@
   <div class="anchor" id="install"></div>
   <h2>install</h2>
 
-  <h3>Подключение через &lt;script&gt; </h3><a href="https://ru.vuejs.org/v2/guide/installation.html">https://ru.vuejs.org/v2/guide/installation.html</a>
+  <h3>Вариант 1. Подключение через &lt;script&gt;</h3>
+  <p><a href="https://ru.vuejs.org/v2/guide/installation.html">https://ru.vuejs.org/v2/guide/installation.html</a></p>
   <p>Просто скачайте JS-файл и подключите его тегом &lt;script&gt; на странице. Будет зарегистрирована глобальная переменная Vue.</p>
-  <pre>&lt;script src="js/vue.js"&gt;&lt;/script&gt;</pre>
+  <code>&lt;script src="js/vue.js"&gt;&lt;/script&gt;</code>
 
-  <h3>Подключениие через cdn </h3><a href="https://ru.vuejs.org/v2/guide/installation.html">https://ru.vuejs.org/v2/guide/installation.html</a>
-  <pre>&lt;script src="https://cdn.jsdelivr.net/npm/vue@2.7.0/dist/vue.js"&gt;&lt;/script&gt;</pre>
+  <h3>Вариант 2. Подключениие через cdn</h3>
+  <p><a href="https://ru.vuejs.org/v2/guide/installation.html">https://ru.vuejs.org/v2/guide/installation.html</a></p>
+  <code>&lt;script src="https://cdn.jsdelivr.net/npm/vue@2.7.0/dist/vue.js"&gt;&lt;/script&gt;</code>
+
+  <h3>Вариант 3. Подключениие через npm</h3>
 </article>
